Bug #14678 report the security vuln fix from 6.3.5